# Pedros-Rescue

./: .gitignore  99-pedros-rescue.rules  COMO_EJECUTAR.md  Dockerfile  Dockerfile.pi  README.md  REPOSITORIES.md  requirements_pc.txt  requirements_raspberry.txt  system_requirements_pc.txt  system_requirements_raspberry.txt
docs/: preview.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rescue_pc_brain/lib/rescue_pc_brain/: dashboard_node  ps4_teleop_node
install/rescue_pc_brain/share/rescue_pc_brain/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rescue_raspberry_brain/lib/rescue_raspberry_brain/: motor_driver_node
install/rescue_raspberry_brain/share/rescue_raspberry_brain/: package.dsv  package.sh  package.xml
log/: latest_build
scripts/: habilitar_usb_ros.sh  install_pi_autostart.sh  run_pi_sensors.sh  run_slam_container.sh
src/cv_bridge/: package.xml  setup.cfg  setup.py
src/cv_bridge/cv_bridge/: __init__.py  core.py
src/install/: local_setup.sh  setup.sh
src/joy/: package.xml  setup.cfg  setup.py
src/joy/joy/: joy_node.py
src/log/: latest_build
src/rescue_bringup/: package.xml  setup.py
src/rescue_bringup/config/: ld19_params.yaml  slam_rviz.rviz  slam_toolbox_params.yaml
src/rescue_bringup/launch/: camera.launch.py  full_bringup.launch.py  lidar_ld19.launch.py  logitech_vision.launch.py  pi_sensors.launch.py  robot_description.launch.py  save_map.launch.py  slam.launch.py  vision.launch.py
src/rescue_bringup/rescue_bringup/: geotiff_writer.py  logitech_pub.py  object_detector.py  pointcloud_accumulator.py
src/rescue_command_station/: package.xml  setup.cfg  setup.py
src/rescue_command_station/launch/: command_station.launch.py
src/rescue_command_station/rescue_command_station/control/: config.py  gearbox.py  tank_drive.py
src/rescue_command_station/rescue_command_station/input/: ps4_controller.py
src/rescue_command_station/rescue_command_station/nodes/: dashboard_node.py  ps4_teleop_node.py  rgbd_viewer_node.py
src/rescue_command_station/rescue_command_station/vision/: qr_detector.py  ros_image.py  tk_image.py
src/rescue_pc_brain/: package.xml  setup.cfg  setup.py
src/rescue_pc_brain/rescue_pc_brain/: control_config.py  controller_mapper.py  dashboard_node.py  drive_command_builder.py  gearbox_manager.py  ps4_teleop_node.py
src/rescue_raspberry_brain/: package.xml  setup.cfg  setup.py
src/rescue_raspberry_brain/rescue_raspberry_brain/: motor_driver_node.py
src/rescue_robot_core/: package.xml  setup.cfg  setup.py
src/rescue_robot_core/launch/: robot_core.launch.py
src/rescue_robot_core/rescue_robot_core/camera_drivers/: astra_rgbd_camera_node.py  logitech_camera_node.py  point_cloud.py  ros_image.py
src/rescue_robot_description/: package.xml  setup.cfg  setup.py
src/rescue_robot_description/urdf/: rescue_robot.urdf.xacro
training/: export_to_onnx.py  test_hazmat_camera.py  train_hazmat.py
(+10 files in other folders)
