<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cv_bridge</name>
  <version>0.1.0</version>
  <description>Small Python CvBridge subset for Pedro Rescue image encodings.</description>
  <maintainer email="pedros-rescue@example.com">pedros rescue team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
