<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy</name>
  <version>0.1.0</version>
  <description>Minimal Linux joystick driver publishing sensor_msgs/Joy.</description>
  <maintainer email="pedros-rescue@example.com">pedros rescue team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
